# pine64-datemon

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: main.bk  main.rs
systemd-service/: datemon.service
