[package]
name = "datemon"
version = "0.1.0"
authors = ["Jorg Bornschein <jb@capsec.org>"]
description = "Monitor system date and trigger reaction if it jumps too far ahead."
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4"
structopt = "0.2"
stderrlog = "0.4"
log = "0.4"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }